--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,8 @@
   "compilerOptions": {
     "target": "es2016",
     "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "outDir": "dist",
     "module": "commonjs",
     "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true
